<resources>
    <string name="app_name">BDMember</string>
    <string name="homeTextThem">首页</string>
    <string name="onlineTextThem">线上问诊</string>
    <string name="contractTextThem">签约服务</string>
    <string name="healthTextThem">健康小屋</string>
    <string name="mineTextThem">我的</string>
    <string name="digits">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="telError">手机号码格式不正确</string>
    <string name="mobileCodeNull">验证码不能为空</string>
    <string name="passEmpty">登录密码不能为空</string>
    <string name="readAgreement">请确认已阅读用户协议</string>
    <string name="register">注 册</string>
    <string name="userAgreements">《用户服务协议》</string>
    <string name="readAndAgreement">已阅读并同意</string>
    <string name="settingPass">设置登录密码</string>
    <string name="sendCode">发送验证码</string>
    <string name="RandomCode">请输入图形验证码</string>
    <string name="enterMobile">请输入手机号码</string>
    <string name="loginSuccess">登录成功</string>
    <string name="accountOrPassError">账号或密码错误</string>
    <string name="enterCode">请输入验证码</string>
    <string name="enterPass">请输入登录密码</string>
    <string name="login">登 录</string>
    <string name="forgotPass">忘记密码</string>
    <string name="registerAccount">注册账号</string>
    <string name="WxOrMobile">微信账号登录</string>
    <string name="quicklyLogin">快速登录</string>
    <string name="accountLogin">账号登录</string>
    <string name="randomError">图形验证码不正确</string>
    <string name="passLengthError">密码不能少于6位</string>
    <string name="exitApp">再按一次退出程序</string>
    <string name="NextStep">下一步</string>
    <string name="finish">完  成</string>
    <string name="configPass">请确认密码</string>
    <string name="enterNewPass">请输入新密码</string>
    <string name="tracePassError">两次密码不一致</string>
    <string name="forgetPass">忘记密码</string>
    <string name="myOrder">我的订单</string>
    <string name="me_order0">图文问诊</string>
    <string name="me_order2">视频问诊</string>
    <string name="me_order3">在线续方</string>
    <string name="me_order4">处方订单包</string>
    <string name="me_order5">服务包</string>
    <string name="me_order6">商品订单</string>
    <string name="me_tool">管理中心</string>
    <string name="me_tool3">我的医生</string>
    <string name="me_tool8">就诊人管理</string>
    <string name="me_tool2">我的处方</string>
    <string name="me_tool4">我的评价</string>
    <string name="me_tool5">随访记录</string>
    <string name="me_tool6">优惠券</string>
    <string name="me_tool7">地址管理</string>
    <string name="me_tool11">我的病例</string>
    <string name="photograph">拍照</string>
    <string name="album">相册</string>
    <string name="confirmPass">确认密码</string>
    <string name="settingLoginPass">设置登录密码</string>
    <string name="about_copy_right">CopyRight @ 芸医生2018</string>
    <string name="serviceTel">客服热线:400-0000-000</string>
    <string name="serviceEmail">客服邮箱:service@site.com</string>
    <string name="currentVersion">当前版本：v2.1.1</string>
    <string name="customerAgreement">《用户服务协议》</string>
    <string name="me_tool10">系统设置</string>
    <string name="home_et_hint">疾病、医院、科室、医生</string>
    <string name="home_item_first_text1">互联网医院</string>
    <string name="home_item_first_text2">签约服务</string>
    <string name="home_item_first_text3">居民健康 </string>
    <string name="home_item_first_text4">健康监测</string>
    <string name="home_item_second_text1">预约挂号</string>
    <string name="home_item_second_text2">智能导诊</string>
    <string name="home_item_second_text3">视频问诊</string>
    <string name="home_item_second_text4">图文问诊</string>
    <string name="home_item_second_text5">护理咨询</string>
    <string name="home_item_second_text6">康复指导</string>
    <string name="home_item_second_text7">在线续方</string>
    <string name="home_item_second_text8">健康资讯</string>
    <string name="home_hot_service">热门服务</string>
    <string name="pregnant_mother_service_package_name">孕妈服务包二</string>
    <string name="recommendation_famous_doctor">名医推荐</string>
    <string name="more">更多</string>
    <string name="recommendation_famous_nurse">金牌护士</string>
    <string name="public_activities">公益活动</string>
    <string name="health_government">健康政务</string>
    <string name="healthGovernmentThem">深圳市人力资源与社会保障体系关于社保上线的通知</string>
    <string name="timeModel">2018-12-07 10:00</string>
    <string name="networkError">网络错误</string>
    <string name="activitiesName">中医养生专属活动</string>
    <string name="signUp">115人已报名</string>
    <string name="singUp_ed">人已报名</string>
    <string name="download">下载</string>
    <string name="calc">计算中...</string>
    <string name="sdError">sd卡错误</string>
    <string name="titleError">标题错误</string>
    <string name="timeErrror">时间错误</string>
    <string name="lookOtherContent">看看其它类容吧</string>
    <string name="baseServicePackageName">儿童保健</string>
    <string name="byeNum">115人已购买</string>
    <string name="price">￥650.00</string>
    <string name="specialPackage">专项服务包</string>
    <string name="basePackage">基础服务包</string>
    <string name="alreadyBuy">人已购买</string>
    <string name="hub_title_them">健康小屋主题</string>
    <string name="activity">活动</string>
    <string name="activities_over">已结束</string>
    <string name="activities_playing">进行中</string>
    <string name="selectArea">选择区/县</string>
    <string name="healthHubThem">健康小屋</string>
    <string name="baseServicePackage">基础服务包</string>
    <string name="buyThem">1000人已购买</string>
    <string name="servicePeople">服务人群：</string>
    <string name="districtCounty">区/县</string>
    <string name="seeDetail">查看详情</string>
    <string name="teamLeader">团队长：</string>
    <string name="selectFamilyMedicalTeam">选择家医团队</string>
    <string name="contractDoctor">签约就诊人</string>
    <string name="contractName">就诊人</string>
    <string name="change">切换</string>
    <string name="homeTownAddress">居住地址</string>
    <string name="doctorInfo">赵笑曰 全科医生</string>
    <string name="contract_family_team">签约家医团队</string>
    <string name="contractServicePackage">签约服务包</string>
    <string name="confirmSubmit">确认提交</string>
    <string name="confirmContractTips">实名制签约，请确保信息真实有效</string>
    <string name="notKnow">未知</string>
    <string name="pleaseSelect">请选择</string>
    <string name="socialSecurity">社保信息</string>
    <string name="fillContractInfo">填写签约信息</string>


















    <string name="menu_settings">Settings</string>

    <string name="scan_text">将二维码置于框内扫描</string>

    <string name="language_text">当前解码语言：</string>
    <string name="selectPaint">请选择就诊人</string>
    <string name="socialSecurityConfirm">有无社保</string>
    <string name="socialSecurityNum">社保账号</string>
    <string name="pleaseFillSocialSecurityNum">请输入社保账号</string>
    <string name="socialSecurityInfo">社保信息</string>
    <string name="noPermissionTips">用户没有允许需要的权限，使用可能会受到限制！</string>
    <string name="submitSuccess">提交成功</string>
    <string name="scanDes">将二维码放入框内即可自动扫描</string>
    <string name="scan">扫一扫</string>
    <string name="openLight">开启照明</string>
    <string name="pleaseSelectAddress">请选择收货地址</string>
    <string name="pleaseSelectPaint">请选择就诊人</string>
</resources>
