<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line_btn">

    <LinearLayout
        style="@style/ll_activity"
        android:background="@color/white">

        <include layout="@layout/layout_titlebar" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_80"
            android:src="@mipmap/logo" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/font_gray_5"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@drawable/about_msg_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:paddingTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceTel"
                    android:textColor="@color/font_gray_5"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceEmail"
                    android:textColor="@color/font_gray_5"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/mVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currentVersion"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColor="@color/font_gray_5"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>


    <TextView
        android:id="@+id/tv_agreement"
        style="@style/tv_default"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_100"
        android:text="@string/customerAgreement"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/theme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="@dimen/sp_12"
        android:textSize="@dimen/sp_10"
        android:text="@string/about_copy_right"
        android:textColor="@color/font_gray_5" />

</RelativeLayout>