<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   style="@style/height_content_width_parent"
    android:id="@+id/ll_contract_service_package"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_service_package_them"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_90"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_group2" />

        <TextView
            android:id="@+id/tv_package_name"
            style="@style/wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:singleLine="true"
            android:enabled="true"
            android:text="@string/baseServicePackageName" />

        <TextView
            android:id="@+id/tv_buyer_num"
            style="@style/wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/byeNum" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/price"
            android:textColor="@color/orange" />
    </LinearLayout>

    <View
        android:layout_width="@dimen/dp_10"
        android:layout_height="match_parent"
        android:background="@android:color/white" />

</LinearLayout>
