<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/height_content_width_parent"
    android:layout_marginTop="@dimen/dp_1"
    android:padding="@dimen/dp_10"
    android:id="@+id/rl_service_package"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/iv_service_package"
        android:layout_width="@dimen/dp_75"
        android:layout_height="@dimen/dp_75"
        android:scaleType="fitXY" />

    <LinearLayout
        style="@style/height_parent_width_content"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_toRightOf="@id/iv_service_package"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_package_name"
            style="@style/wrap_content"
            android:text="@string/health_government"
            android:textColor="@color/deep_gray_text"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/price"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <LinearLayout
            style="@style/wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_past_price"
                style="@style/wrap_content"
                android:text="@string/price"
                android:textColor="@color/shallow_gray_text"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:id="@+id/tv_has_buy"
                style="@style/wrap_content"
                android:text="@string/buyThem"
                android:layout_marginLeft="@dimen/dp_10"
                android:textColor="@color/shallow_gray_text"
                android:textSize="@dimen/sp_10" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_service_people"
            style="@style/wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/servicePeople"
            android:textColor="@color/shallow_gray_text"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_go_detail"
        style="@style/wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:background="@mipmap/ic_more" />

</RelativeLayout>
