<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_20">

        <TextView
            android:id="@+id/home_item_first_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_home_item_first_1"
            android:gravity="center"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/home_item_first_text1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:id="@+id/home_item_first_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_20"
            android:drawableLeft="@mipmap/ic_home_item_first_2"
            android:gravity="center"
            android:text="@string/home_item_first_text2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_20">

        <TextView
            android:id="@+id/home_item_first_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/dp_20"
            android:drawableLeft="@mipmap/ic_home_item_first_3"
            android:gravity="center"
            android:text="@string/home_item_first_text3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/home_item_first_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_home_item_first_4"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/home_item_first_text4"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>


</LinearLayout>
