<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_36"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_home_item_second_1"
            android:gravity="center"
            android:text="@string/home_item_second_text1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_0_5"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/activity_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_home_item_second_2"
            android:gravity="center"
            android:text="@string/home_item_second_text2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_0_5"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/activity_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_home_item_second_3"
            android:gravity="center"
            android:text="@string/home_item_second_text3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_0_5"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/activity_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_home_item_second_4"
            android:gravity="center"
            android:text="@string/home_item_second_text4"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>


</LinearLayout>
