<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/height_content_width_parent"
    android:layout_marginTop="@dimen/dp_10"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/home_title_padding"
        android:background="@android:color/white">

        <TextView
            style="@style/wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@mipmap/ic_home_health_government"
            android:drawableRight="@mipmap/ic_home_health_government"
            android:drawablePadding="@dimen/dp_10"
            android:text="@string/health_government"
            android:textColor="@color/deep_gray_text"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_home_public_activities"
            style="@style/wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:drawableRight="@mipmap/ic_more"
            android:drawablePadding="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/more"
            android:textColor="@color/shallow_gray_text"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_health_government_recyclerView"
        style="@style/height_content_width_parent"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@android:color/white"
        android:padding="@dimen/dp_15" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@color/activity_bg"
        android:paddingLeft="@dimen/dp_50"
        android:paddingBottom="@dimen/dp_20"
        android:paddingRight="@dimen/dp_50">

        <View
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_1"
            android:layout_gravity="center"
            android:background="@color/shallow_gray_text"/>

        <TextView
            android:id="@+id/tv_content_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/activity_bg"
            android:layout_gravity="center"
            android:paddingRight="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/lookOtherContent"
            android:textColor="@color/shallow_gray_text"
            android:textSize="@dimen/sp_14"
            android:visibility="visible" />


    </FrameLayout>


</LinearLayout>
